Fixing input split partitioning (#29)